--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=Proyecto
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.name=proyecto
+spring.datasource.generate-unique-name=false
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
